# jotabot

./: .breakpoints  counter.db  dontforget.py  jotadb.py  jotalea.py  keep_alive.py  keys.py  log.php  main.py  pyproject.toml  replit.nix  settings.py
templates/: alt.html  index.html
